fixed issue reported during testing